--- a/app/src/main/res/layout/activity_journal_list.xml
+++ b/app/src/main/res/layout/activity_journal_list.xml
@@ -92,7 +92,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_width="390dp"
+        android:layout_width="match_parent"
         android:layout_height="638dp"
         android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
