--- a/app/src/main/res/layout/journal_row.xml
+++ b/app/src/main/res/layout/journal_row.xml
@@ -49,8 +49,6 @@
             android:background="@android:color/transparent"
             android:src="@android:drawable/ic_delete" />
 
-
-
     </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
@@ -92,14 +90,47 @@
             android:layout_height="wrap_content"
             android:padding="5dp"
             android:text="Date Created" />
-        <ImageSwitcher
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            >
 
-        </ImageSwitcher>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/like_button_journal"
+            android:layout_width="37dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="5dp"
+            android:padding="2dp"
+            android:src="@drawable/outline_favorite_border_black_20">
+
+        </ImageView>
+
+        <ImageView
+            android:id="@+id/comment_journal"
+            android:layout_width="40dp"
+            android:layout_height="34dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"
+            android:padding="2dp"
+            android:src="@drawable/outline_chat_bubble_outline_black_20">
+
+        </ImageView>
 
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/likedList_journal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Liked by 0 ">
+
+    </TextView>
+
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
