--- a/app/src/main/res/layout/activity_account_upadte.xml
+++ b/app/src/main/res/layout/activity_account_upadte.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     app:cardCornerRadius="8dp"
     android:layout_height="350dp"
+    android:fitsSystemWindows="true"
     tools:menu="@menu/menu_postadd"
     tools:context=".AccountUpadteActivity">
 
