--- a/app/src/main/res/layout/activity_post_journal.xml
+++ b/app/src/main/res/layout/activity_post_journal.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:background="@drawable/gradient_bg"
     android:rotationX="0"
     tools:menu="@menu/menu_postadd"
